--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,8 @@ header p {
     /*Your code here  */
     /* See documentation for mobile view */
     display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-columns: 100px 400px 100px;
+    /*grid-template-columns: 1fr 3fr 1fr;*/
     grid-template-rows: 30px repeat(5, auto) 100px;
     grid-row-gap: 15px;
 }
@@ -134,6 +135,7 @@ header p {
     /*Your code here */
     /* See documentation for mobile view */
     grid-column: 2 / span 1;
+    grid-row: auto / span 1;
 }
 
 .about-image,
