--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,7 @@ header p {
     /*Your code here */
     /* See documentation for mobile view */
     grid-row: 3 / span 1;
+    margin: auto;
 }
 
 .method,
@@ -162,6 +163,7 @@ header p {
     /*Your code here */
     /* See documentation for mobile view */
     grid-row: 4 / span 1;
+    margin: auto;
 }
 
 .clients,
@@ -169,6 +171,7 @@ header p {
     /*Your code here */
     /* See documentation for mobile view */
     grid-row: 5 / span 1;
+    margin: auto;
 }
 
 .contact,
@@ -176,6 +179,7 @@ header p {
     /*Your code here */
     /* See documentation for mobile view */
     grid-row: 6 / span 1;
+    margin: auto;
 }
 
 .text-block {
